--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1125.0",
     "bcrypt": "^5.0.1",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
